# jpeg-reader

./: .gitignore  CMakeLists.txt  README.md  demo.c  main.c
example/: CMakeLists.txt  demo
include/: exif.h  jfif.h  jpeg.h  tag.h  tags.h
include/legacy/: _jpeg.h  _tag.h
include/private/: exif.h  tags.h
include/public/: jpeg.h
source/: CMakeLists.txt  exif.c  jfif.c  jpeg.c
source/legacy/: _jfif.c
